# next-session

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  index.html  package.json  rust-toolchain  rustfmt.toml  wasm.d.ts  wasm.js  wasm_bg.d.ts  wasm_bg.wasm
.github/workflows/: continuous-integration.yml  pages.yml
src/: config.rs  data.rs  lib.rs  model.rs  schedule.rs  session.rs
static/: .gitignore  config.json  index.html
